Tue Sep  9 18:58:48 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename
	  * total_allocated_object_num -> total_allocated_objects
	  * total_allocated_object_num_at_gc_start -> total_allocated_objects_at_gc_start
	  * total_freed_object_num -> total_freed_objects

	* gc.c (gc_stat_internal): 
	  * rename total_allocated_object -> total_allocated_objects
	  * rename total_freed_object -> total_freed_objects

Tue Sep  9 18:51:36 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat_internal): fix symbol names
	  * heap_final_slot -> heap_final_slots
	  * heap_swept_slot -> heap_swept_slots

Tue Sep  9 18:18:07 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_t::heap_pages): rename field names:
	  * used -> allocated_pages
	  * increment -> allocatable_pages
	  * length -> sorted_length
	  And remove unused `limt' field.

	* gc.c: rename macros:
	  * heap_pages_used -> heap_allocated_pages
	  * heap_pages_length -> heap_pages_sorted_length
	  * heap_pages_increment -> heap_allocatable_pages

	* gc.c (gc_stat_internal): fix symbol names
	  * heap_used -> heap_allocated_pages
	  * heap_eden_page_length -> heap_eden_pages
	  * heap_tomb_page_length -> heap_tomb_pages
	  * heap_increment -> heap_allocatable_pages
	  * heap_length -> heap_sorted_length

	  ref: [Feature #9924]
	  https://docs.google.com/spreadsheets/d/11Ua4uBr6o0k-nORrZLEIIUkHJ9JRzRR0NyZfrhEEnc8/edit?usp=sharing
	  Yellow color fields in this table are changed.

	* test/ruby/test_gc.rb: catch up this change.

Tue Sep  9 14:56:03 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: continue layout changing.

	  newobj_of() also touch:
	  (4) increment total_allocated_object_num
	  (5) check hook_events

	  And gather fields related to marking phase.

Tue Sep  9 14:21:50 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix layout of rb_objsapce_t to improve cache locality.

	  newobj_of() accesses:
	  (1) rb_objspace_t::flags
	  (2) rb_objspace_t::eden_heap::freelist